--- a/_includes/_nav.html
+++ b/_includes/_nav.html
@@ -1,6 +1,7 @@
 <div class="nav">
     <a href="/">
-        <h1>{{ page.title | default: site.title }}</h1>
+        ![logo](assets/images/m-icon-01.png)
+        <h1>{{ site.title }}</h1>
     </a>
     <a href="index.html">About</a>
 </div>
