--- a/_includes/_nav.html
+++ b/_includes/_nav.html
@@ -1,6 +1,6 @@
 <div class="nav">
     <a href="/">
-        ![logo](https://medienexpedition.github.io/assets/images/m-icon-01.png)
+        <img src="assets/images/m-icon-01.png" />
         <h1>{{ site.title }}</h1>
     </a>
     <a href="index.html">About</a>
