--- a/_includes/_nav.html
+++ b/_includes/_nav.html
@@ -1,7 +1,7 @@
 <div class="nav">
     <a href="/">
         <img src="assets/images/m-icon-01.png" />
-        <h1>{{ site.title }}</h1>
+        <h1 id="site-title">{{ site.title }}</h1>
     </a>
     <a href="index.html">About</a>
 </div>
