--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
 <body>
     <div id="frame">
         <div id="header">
+            {% include _header.html %}
+        </div>
+        <div id="nav">
             {% include _nav.html %}
         </div>
         <div id="main">
