--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -5,10 +5,24 @@
 @import "reset";
 @import "layout";
 
-#site-title {
+.header h1 {
     font-size: 1.1em;
+}
+
+.header a {
+    text-decoration: none;
 }
 
 .nav a {
     text-decoration: none;
+}
+
+.nav a.current {
+    color: #000;
+    text-decoration: underline;
+    cursor: default;
+}
+
+.nav a.current:hover {
+    color: #000;
 }
