--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -64,7 +64,7 @@ p {
 .nav {
     grid-area: nav;
     display: inline-block;
-
+    margin-top: 1em;
     a {
         text-decoration: none;
     }
